// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Standard template renders a single child element 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-1"
      />
    </View>
  </View>
</View>
`;

exports[`2. Standard template renders two child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-1"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-2"
      />
    </View>
  </View>
</View>
`;

exports[`3. Standard template renders three child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-1"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-2"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="standard-3"
      />
    </View>
  </View>
</View>
`;

exports[`4. Lead and two template renders a single child element 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="lead"
      />
    </View>
  </View>
</View>
`;

exports[`5. Lead and two template renders two child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="lead"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-1"
      />
    </View>
  </View>
</View>
`;

exports[`6. Lead and two template renders three child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="lead"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-1"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-2"
      />
    </View>
  </View>
</View>
`;

exports[`7. Opinion and two template renders a single child element 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="opinion"
      />
    </View>
  </View>
</View>
`;

exports[`8. Opinion and two template renders two child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="opinion"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-1"
      />
    </View>
  </View>
</View>
`;

exports[`9. Opinion and two template renders three child elements 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="opinion"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-1"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <ExampleChild
        id="support-2"
      />
    </View>
  </View>
</View>
`;

exports[`10. Standard tracking roles 1`] = `
Array [
  "standard-1",
  "standard-2",
  "standard-3",
]
`;

exports[`11. Lead and two tracking roles 1`] = `
Array [
  "lead-and-two",
  "lead-and-two-supporting-1",
  "lead-and-two-supporting-2",
]
`;

exports[`12. Opinion and two tracking roles 1`] = `
Array [
  "opinion-and-two",
  "opinion-and-two-supporting-1",
  "opinion-and-two-supporting-2",
]
`;
